// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectAll should be unchecked when there is no items 1`] = `
<form
  className="theme-container navbar-form navbar-left"
>
  <div
    className="checkbox-inline navbar-text theme-tc-list-toolbar-select-all"
  >
    <label
      className="tc-list-toolbar-select-all"
    >
      <input
        checked={false}
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Select All
      </span>
    </label>
  </div>
</form>
`;

exports[`SelectAll should render 1`] = `
<form
  className="theme-container navbar-form navbar-left"
>
  <div
    className="checkbox-inline navbar-text theme-tc-list-toolbar-select-all"
  >
    <label
      className="tc-list-toolbar-select-all"
    >
      <input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Select All
      </span>
    </label>
  </div>
</form>
`;

exports[`SelectAll should render id if provided 1`] = `
<form
  className="theme-container navbar-form navbar-left"
>
  <div
    className="checkbox-inline navbar-text theme-tc-list-toolbar-select-all"
  >
    <label
      className="tc-list-toolbar-select-all"
      htmlFor="list-toolbar-check-all"
    >
      <input
        checked={false}
        disabled={false}
        id="list-toolbar-check-all"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Select All
      </span>
    </label>
  </div>
</form>
`;
